@@ -1,3 +1,9 @@
+2006-03-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: moved comment to correct position
+	* src/Win_GParted.cc: fixed issues with mountpoints containing
+	  underscores and/or spaces.
+	  
 2006-03-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Win_GParted.cc: fixed visual feedback while mounting a partition
